DGC-392: fix excessive spacing on footer SVGs. (#776)

--- a/docroot/themes/custom/twentynineteen/sass/components/regions/_footer.scss
+++ b/docroot/themes/custom/twentynineteen/sass/components/regions/_footer.scss
@@ -7,6 +7,10 @@
 
 footer {
   position: relative;
+
+  svg {
+    max-height: 50px;
+  }
 }
 
 .mq-footer {
